--- a/ch0.html
+++ b/ch0.html
@@ -172,7 +172,7 @@
                     	</div>
 
                     	<div class="col-xs-12 col-sm-4">
-                    		<img class="img-100" src="img/ch.0/ex_tri.jpg">
+                    		<img class="img-100" src="/img/ch.0/ex_tri.jpg">
                     	</div>
                     </div>
 
@@ -186,7 +186,7 @@
                     	</div>
 
                     	<div class="col-xs-12 col-sm-4">
-                    		<img class="img-100" src="img/ch.0/focus.jpg">
+                    		<img class="img-100" src="/img/ch.0/focus.jpg">
                     	</div>
                     </div>
 
@@ -200,7 +200,7 @@
                     	</div>
 
                     	<div class="col-xs-12 col-sm-4">
-                    		<img class="img-100" src="img/ch.0/lens.jpg">
+                    		<img class="img-100" src="/img/ch.0/lens.jpg">
                     	</div>
                     </div>
 
@@ -215,7 +215,7 @@
                     	</div>
 
                     	<div class="col-xs-12 col-sm-4">
-                    		<img class="img-100" src="img/ch.0/comp.jpg">
+                    		<img class="img-100" src="/img/ch.0/comp.jpg">
                     	</div>
                     </div>
 
